--- a/Lab/introduction_to_colab_and_python.ipynb
+++ b/Lab/introduction_to_colab_and_python.ipynb
@@ -15,29 +15,9 @@
    "source": [
     "##### Copyright 2018 The TensorFlow Authors.\n",
     "\n",
-    "#### Adapted from https://github.com/tensorflow/examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "cellView": "form",
-    "id": "Eq10uEbw0E4l"
-   },
-   "outputs": [],
-   "source": [
-    "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-    "# you may not use this file except in compliance with the License.\n",
-    "# You may obtain a copy of the License at\n",
-    "#\n",
-    "# https://www.apache.org/licenses/LICENSE-2.0\n",
-    "#\n",
-    "# Unless required by applicable law or agreed to in writing, software\n",
-    "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-    "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-    "# See the License for the specific language governing permissions and\n",
-    "# limitations under the License."
+    "#### Adapted from https://github.com/tensorflow/examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\n",
+    "\n",
+    "Licensed under the Apache License, Version 2.0 (the \"License\");"
    ]
   },
   {
@@ -48,10 +28,11 @@
    "source": [
     "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
     "  <td>\n",
-    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "    <a target=\"_blank\" \n",
+    "href=\"https://colab.research.google.com/github/bruceMacLeod/COS475-575/blob/main/Lab/introduction_to_colab_and_python.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
     "  </td>\n",
     "  <td>\n",
-    "    <a target=\"_blank\" href=\"https://github.com/tensorflow/examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+    "    <a target=\"_blank\" href=\"https://github.com/bruceMacLeod/COS475-575/blob/main/Lab/introduction_to_colab_and_python.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
     "  </td>\n",
     "</table>"
    ]
@@ -62,7 +43,16 @@
     "id": "F8YVA_634OFk"
    },
    "source": [
-    "Welcome to this Colab where you will get a quick introduction to the Python programming language and the jupyter notebook environment.\n",
+    "Welcome to this Colab where you will get a quick introduction to the Python programming language and the jupyter notebook environment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "wwJGmDrQ0EoB"
+   },
+   "source": [
+    "## Python : Functions, Conditionals, and Iteration\n",
     "\n",
     "Colab is a Python development environment that runs in the browser using Google Cloud.\n",
     "\n",
@@ -82,12 +72,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wwJGmDrQ0EoB"
-   },
+   "metadata": {},
    "source": [
-    "## Python : Functions, Conditionals, and Iteration\n",
-    "Let's create a Python function, and call it from a loop."
+    "\n",
+    "Let's create a Python function, and call it from a loop.\n"
    ]
   },
   {
@@ -130,9 +118,8 @@
     "id": "kiZG7uhm8qCF"
    },
    "source": [
-    "Easy, right?\n",
     "\n",
-    "If you want a loop starting at 0 to 2 (exclusive) you could do any of the following"
+    "If you want a loop starting at 0 to 2 (exclusive) you could do any of the following\n"
    ]
   },
   {
