--- a/Lab/introduction_to_colab_and_python.ipynb
+++ b/Lab/introduction_to_colab_and_python.ipynb
@@ -14,9 +14,7 @@
    },
    "source": [
     "##### Copyright 2018 The TensorFlow Authors.\n",
-    "\n",
-    "#### Adapted from https://github.com/tensorflow/examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\n",
-    "\n",
+    "Adapted from https://github.com/tensorflow/examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\n",
     "Licensed under the Apache License, Version 2.0 (the \"License\");"
    ]
   },
