--- a/Lab/introduction_to_colab_and_python.ipynb
+++ b/Lab/introduction_to_colab_and_python.ipynb
@@ -24,6 +24,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lab partner Names : "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "OVi775ZJ2bsy"
    },
