--- a/Assignment/HypertensionV1.ipynb
+++ b/Assignment/HypertensionV1.ipynb
@@ -310,6 +310,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(13,10))\n",
+    "\n",
+    "hp_df['age_groups'] = pd.cut(hp_df['RIDAGEYR'], bins=range(20,90,8))\n",
+    "\n",
+    "# Creating a bar chart of ticket class (Pclass) vs probability of survival (Survived)\n",
+    "ax1 = plt.subplot(221)\n",
+    "g1 = sns.barplot(x='age_groups', y='BPXOSY', data=hp_df, color='seagreen')\n",
+    "plt.ylabel('Systolic Pressure')\n",
+    "plt.xlabel('Age')\n",
+    "plt.title('Age and Systolic Pressure', size=13)\n",
+    "\n",
+    "hp_df = hp_df.drop('age_groups', axis=1)\n",
+    "# Creating a bar chart of ticket class (Pclass) and gender (Sex) vs probability of survival (Survived)\n",
+    "ax2 = plt.subplot(222)\n",
+    "g2 = sns.barplot(x='RIAGENDR', y='BPXOSY', data=hp_df, palette='BuGn_r')\n",
+    "plt.ylabel('Systolic Pressure')\n",
+    "plt.xlabel('Gender')\n",
+    "ax2.set_xticklabels(['Male', 'Female'])\n",
+    "plt.title('Gender and Systolic Pressure', size=13)\n",
+    "\n",
+    "\n",
+    "plt.subplots_adjust(hspace = 0.4, wspace = 0.3)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The left barchart shows age and systolic blood pressure are correlations\n",
+    "\n",
+    "The right barchart shows differences between male and female blood pressures."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More graph and EDA needed (todo)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
