--- a/Lab/GD_lab-V1.ipynb
+++ b/Lab/GD_lab-V1.ipynb
@@ -493,7 +493,8 @@
    "source": [
     "### Exercise : Cost Function\n",
     "\n",
-    "Implement the Mean squared error cost function for a linear regression (Pg 114 of the book)"
+    "Implement the Mean squared error cost function for a linear regression (Pg 114 of the book).\n",
+    "As a challenge, I encourage you to form the matrix/vector form of the equation. For loop is okay though"
    ]
   },
   {
